--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
   --color-col-bg: #ededed;
   --color-col-disabled: #bbc0c4;
   --color-col-disabled-txt: #2f333d;
+  --color-col-preview: #ffffff80;
+  --color-col-red-arrow: #e51010;
 }
 
 body {
