added posts to user profile page

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --color-col9: #caf0f8;
   --color-col10: #cccccc;
   --color-col-bg: #ededed;
+  --color-col-bg-dark: #e1e1e1;
   --color-col-disabled: #bbc0c4;
   --color-col-disabled-txt: #2f333d;
   --color-col-preview: #ffffff80;
